@@ -266,6 +266,46 @@ int GTIFGetPCSInfo( int nPCSCode, char **ppszEPSGName,
     char	**papszRecord;
     char	szSearchKey[24];
     const char	*pszFilename;
+    int         nDatum;
+    int         nZone;
+
+    int Proj = GTIFPCSToMapSys( nPCSCode, &nDatum, &nZone );
+    if ((Proj == MapSys_UTM_North || Proj == MapSys_UTM_South) &&
+        nDatum != KvUserDefined)
+    {
+        const char* pszDatumName = NULL;
+        switch (nDatum)
+        {
+            case GCS_NAD27: pszDatumName = "NAD27"; break;
+            case GCS_NAD83: pszDatumName = "NAD83"; break;
+            case GCS_WGS_72: pszDatumName = "WGS 72"; break;
+            case GCS_WGS_72BE: pszDatumName = "WGS 72BE"; break;
+            case GCS_WGS_84: pszDatumName = "WGS 84"; break;
+            default: break;
+        }
+
+        if (pszDatumName)
+        {
+            if (ppszEPSGName)
+            {
+                char szEPSGName[64];
+                sprintf(szEPSGName, "%s / UTM zone %d%c",
+                        pszDatumName, nZone, (Proj == MapSys_UTM_North) ? 'N' : 'S');
+                *ppszEPSGName = CPLStrdup(szEPSGName);
+            }
+
+            if (pnProjOp)
+                *pnProjOp = ((Proj == MapSys_UTM_North) ? Proj_UTM_zone_1N - 1 : Proj_UTM_zone_1S - 1) + nZone;
+
+            if (pnUOMLengthCode)
+                *pnUOMLengthCode = 9001; /* Linear_Meter */
+
+            if (pnGeogCS)
+                *pnGeogCS = nDatum;
+
+            return TRUE;
+        }
+    }
 
 /* -------------------------------------------------------------------- */
 /*      Search the pcs.override table for this PCS.                     */
@@ -368,7 +408,7 @@ double GTIFAngleToDD( double dfAngle, int nUOMAngle )
         sprintf( szAngleString, "%12.7f", dfAngle );
         dfAngle = GTIFAngleStringToDD( szAngleString, nUOMAngle );
     }
-    else
+    else if ( nUOMAngle != KvUserDefined )
     {
         double		dfInDegrees = 1.0;
         
@@ -475,6 +515,51 @@ int GTIFGetGCSInfo( int nGCSCode, char ** ppszName,
     const char *pszFilename;
 
 /* -------------------------------------------------------------------- */
+/*      Handle some "well known" GCS codes directly                     */
+/* -------------------------------------------------------------------- */
+    const char * pszName = NULL;
+    nPM = PM_Greenwich;
+    nUOMAngle = Angular_DMS_Hemisphere; 
+    if( nGCSCode == GCS_NAD27 )
+    {
+        nDatum = Datum_North_American_Datum_1927;
+        pszName = "NAD27";
+    }
+    else if( nGCSCode == GCS_NAD83 )
+    {
+        nDatum = Datum_North_American_Datum_1983;
+        pszName = "NAD83";
+    }
+    else if( nGCSCode == GCS_WGS_84 )
+    {
+        nDatum = Datum_WGS84;
+        pszName = "WGS 84";
+    }
+    else if( nGCSCode == GCS_WGS_72 )
+    {
+        nDatum = Datum_WGS72;
+        pszName = "WGS 72";
+    }
+    else if ( nGCSCode == KvUserDefined )
+    {
+        return FALSE;
+    }
+
+    if (pszName != NULL)
+    {
+        if( ppszName != NULL )
+            *ppszName = CPLStrdup( pszName );
+        if( pnDatum != NULL )
+            *pnDatum = (short) nDatum;
+        if( pnPM != NULL )
+            *pnPM = (short) nPM;
+        if( pnUOMAngle != NULL )
+            *pnUOMAngle = (short) nUOMAngle;
+
+        return TRUE;
+    }
+
+/* -------------------------------------------------------------------- */
 /*      Search the database for the corresponding datum code.           */
 /* -------------------------------------------------------------------- */
     pszFilename = CSVFilename("gcs.override.csv");
@@ -492,48 +577,9 @@ int GTIFGetGCSInfo( int nGCSCode, char ** ppszName,
                                    CC_Integer, "DATUM_CODE" ) );
     }
 
-/* -------------------------------------------------------------------- */
-/*      Handle some "well known" GCS codes directly if the table        */
-/*      wasn't found.                                                   */
-/* -------------------------------------------------------------------- */
     if( nDatum < 1 )
     {
-        const char * pszName = NULL;
-        nPM = PM_Greenwich;
-        nUOMAngle = Angular_DMS_Hemisphere; 
-        if( nGCSCode == GCS_NAD27 )
-        {
-            nDatum = Datum_North_American_Datum_1927;
-            pszName = "NAD27";
-        }
-        else if( nGCSCode == GCS_NAD83 )
-        {
-            nDatum = Datum_North_American_Datum_1983;
-            pszName = "NAD83";
-        }
-        else if( nGCSCode == GCS_WGS_84 )
-        {
-            nDatum = Datum_WGS84;
-            pszName = "WGS 84";
-        }
-        else if( nGCSCode == GCS_WGS_72 )
-        {
-            nDatum = Datum_WGS72;
-            pszName = "WGS 72";
-        }
-        else
-            return FALSE;
-
-        if( ppszName != NULL )
-            *ppszName = CPLStrdup( pszName );
-        if( pnDatum != NULL )
-            *pnDatum = (short) nDatum;
-        if( pnPM != NULL )
-            *pnPM = (short) nPM;
-        if( pnUOMAngle != NULL )
-            *pnUOMAngle = (short) nUOMAngle;
-
-        return TRUE;
+        return FALSE;
     }
 
     if( pnDatum != NULL )
@@ -594,56 +640,45 @@ int GTIFGetEllipsoidInfo( int nEllipseCode, char ** ppszName,
     char	szSearchKey[24];
     double	dfSemiMajor, dfToMeters = 1.0;
     int		nUOMLength;
-    
-/* -------------------------------------------------------------------- */
-/*      Get the semi major axis.                                        */
-/* -------------------------------------------------------------------- */
-    sprintf( szSearchKey, "%d", nEllipseCode );
-
-    dfSemiMajor =
-        atof(CSVGetField( CSVFilename("ellipsoid.csv" ),
-                          "ELLIPSOID_CODE", szSearchKey, CC_Integer,
-                          "SEMI_MAJOR_AXIS" ) );
+    const char* pszFilename;
 
 /* -------------------------------------------------------------------- */
 /*      Try some well known ellipsoids.                                 */
 /* -------------------------------------------------------------------- */
-    if( dfSemiMajor == 0.0 )
+    double     dfInvFlattening, dfSemiMinor;
+    const char *pszName = NULL;
+    
+    if( nEllipseCode == Ellipse_Clarke_1866 )
     {
-        double     dfInvFlattening, dfSemiMinor;
-        const char *pszName = NULL;
-        
-        if( nEllipseCode == Ellipse_Clarke_1866 )
-        {
-            pszName = "Clarke 1866";
-            dfSemiMajor = 6378206.4;
-            dfSemiMinor = 6356583.8;
-            dfInvFlattening = 0.0;
-        }
-        else if( nEllipseCode == Ellipse_GRS_1980 )
-        {
-            pszName = "GRS 1980";
-            dfSemiMajor = 6378137.0;
-            dfSemiMinor = 0.0;
-            dfInvFlattening = 298.257222101;
-        }
-        else if( nEllipseCode == Ellipse_WGS_84 )
-        {
-            pszName = "WGS 84";
-            dfSemiMajor = 6378137.0;
-            dfSemiMinor = 0.0;
-            dfInvFlattening = 298.257223563;
-        }
-        else if( nEllipseCode == 7043 )
-        {
-            pszName = "WGS 72";
-            dfSemiMajor = 6378135.0;
-            dfSemiMinor = 0.0;
-            dfInvFlattening = 298.26;
-        }
-        else
-            return FALSE;
+        pszName = "Clarke 1866";
+        dfSemiMajor = 6378206.4;
+        dfSemiMinor = 6356583.8;
+        dfInvFlattening = 0.0;
+    }
+    else if( nEllipseCode == Ellipse_GRS_1980 )
+    {
+        pszName = "GRS 1980";
+        dfSemiMajor = 6378137.0;
+        dfSemiMinor = 0.0;
+        dfInvFlattening = 298.257222101;
+    }
+    else if( nEllipseCode == Ellipse_WGS_84 )
+    {
+        pszName = "WGS 84";
+        dfSemiMajor = 6378137.0;
+        dfSemiMinor = 0.0;
+        dfInvFlattening = 298.257223563;
+    }
+    else if( nEllipseCode == 7043 )
+    {
+        pszName = "WGS 72";
+        dfSemiMajor = 6378135.0;
+        dfSemiMinor = 0.0;
+        dfInvFlattening = 298.26;
+    }
 
+    if (pszName != NULL)
+    {
         if( dfSemiMinor == 0.0 )
             dfSemiMinor = dfSemiMajor * (1 - 1.0/dfInvFlattening);
 
@@ -658,9 +693,25 @@ int GTIFGetEllipsoidInfo( int nEllipseCode, char ** ppszName,
     }
 
 /* -------------------------------------------------------------------- */
+/*      Get the semi major axis.                                        */
+/* -------------------------------------------------------------------- */
+    sprintf( szSearchKey, "%d", nEllipseCode );
+    pszFilename = CSVFilename("ellipsoid.csv" );
+
+    dfSemiMajor =
+        atof(CSVGetField( pszFilename,
+                          "ELLIPSOID_CODE", szSearchKey, CC_Integer,
+                          "SEMI_MAJOR_AXIS" ) );
+
+    if( dfSemiMajor == 0.0 )
+    {
+        return FALSE;
+    }
+
+/* -------------------------------------------------------------------- */
 /*	Get the translation factor into meters.				*/
 /* -------------------------------------------------------------------- */
-    nUOMLength = atoi(CSVGetField( CSVFilename("ellipsoid.csv" ),
+    nUOMLength = atoi(CSVGetField( pszFilename,
                                    "ELLIPSOID_CODE", szSearchKey, CC_Integer,
                                    "UOM_CODE" ));
     GTIFGetUOMLengthInfo( nUOMLength, NULL, &dfToMeters );
@@ -677,7 +728,7 @@ int GTIFGetEllipsoidInfo( int nEllipseCode, char ** ppszName,
     if( pdfSemiMinor != NULL )
     {
         *pdfSemiMinor =
-            atof(CSVGetField( CSVFilename("ellipsoid.csv" ),
+            atof(CSVGetField( pszFilename,
                               "ELLIPSOID_CODE", szSearchKey, CC_Integer,
                               "SEMI_MINOR_AXIS" )) * dfToMeters;
 
@@ -686,7 +737,7 @@ int GTIFGetEllipsoidInfo( int nEllipseCode, char ** ppszName,
             double	dfInvFlattening;
             
             dfInvFlattening = 
-                atof(CSVGetField( CSVFilename("ellipsoid.csv" ),
+                atof(CSVGetField( pszFilename,
                                   "ELLIPSOID_CODE", szSearchKey, CC_Integer,
                                   "INV_FLATTENING" ));
             *pdfSemiMinor = dfSemiMajor * (1 - 1.0/dfInvFlattening);
@@ -698,7 +749,7 @@ int GTIFGetEllipsoidInfo( int nEllipseCode, char ** ppszName,
 /* -------------------------------------------------------------------- */
     if( ppszName != NULL )
         *ppszName =
-            CPLStrdup(CSVGetField( CSVFilename("ellipsoid.csv" ),
+            CPLStrdup(CSVGetField( pszFilename,
                                    "ELLIPSOID_CODE", szSearchKey, CC_Integer,
                                    "ELLIPSOID_NAME" ));
     
@@ -717,7 +768,7 @@ int GTIFGetPMInfo( int nPMCode, char ** ppszName, double *pdfOffset )
 {
     char	szSearchKey[24];
     int		nUOMAngle;
-    const char *pszFilename = CSVFilename("prime_meridian.csv");
+    const char *pszFilename;
 
 /* -------------------------------------------------------------------- */
 /*      Use a special short cut for Greenwich, since it is so common.   */
@@ -734,6 +785,7 @@ int GTIFGetPMInfo( int nPMCode, char ** ppszName, double *pdfOffset )
 /* -------------------------------------------------------------------- */
 /*      Search the database for the corresponding datum code.           */
 /* -------------------------------------------------------------------- */
+    pszFilename = CSVFilename("prime_meridian.csv");
     sprintf( szSearchKey, "%d", nPMCode );
 
     nUOMAngle =
@@ -780,13 +832,50 @@ int GTIFGetDatumInfo( int nDatumCode, char ** ppszName, short * pnEllipsoid )
 {
     char	szSearchKey[24];
     int		nEllipsoid;
-    const char *pszFilename = CSVFilename( "datum.csv" );
+    const char *pszFilename;
     FILE       *fp;
+    const char *pszName = NULL;
+
+/* -------------------------------------------------------------------- */
+/*      Handle a few built-in datums.                                   */
+/* -------------------------------------------------------------------- */
+    if( nDatumCode == Datum_North_American_Datum_1927 )
+    {
+        nEllipsoid = Ellipse_Clarke_1866;
+        pszName = "North American Datum 1927";
+    }
+    else if( nDatumCode == Datum_North_American_Datum_1983 )
+    {
+        nEllipsoid = Ellipse_GRS_1980;
+        pszName = "North American Datum 1983";
+    }
+    else if( nDatumCode == Datum_WGS84 )
+    {
+        nEllipsoid = Ellipse_WGS_84;
+        pszName = "World Geodetic System 1984";
+    }
+    else if( nDatumCode == Datum_WGS72 )
+    {
+        nEllipsoid = 7043; /* WGS72 */
+        pszName = "World Geodetic System 1972";
+    }
+
+    if (pszName != NULL)
+    {
+        if( pnEllipsoid != NULL )
+            *pnEllipsoid = (short) nEllipsoid;
+
+        if( ppszName != NULL )
+            *ppszName = CPLStrdup( pszName );
+
+        return TRUE;
+    }
 
 /* -------------------------------------------------------------------- */
 /*      If we can't find datum.csv then gdal_datum.csv is an            */
 /*      acceptable fallback.  Mostly this is for GDAL.                  */
 /* -------------------------------------------------------------------- */
+    pszFilename = CSVFilename( "datum.csv" );
     if( (fp = VSIFOpen(pszFilename,"r")) == NULL )
     {
         if( (fp = VSIFOpen(CSVFilename("gdal_datum.csv"), "r")) != NULL )
@@ -809,44 +898,10 @@ int GTIFGetDatumInfo( int nDatumCode, char ** ppszName, short * pnEllipsoid )
 
     if( pnEllipsoid != NULL )
         *pnEllipsoid = (short) nEllipsoid;
-    
-/* -------------------------------------------------------------------- */
-/*      Handle a few built-in datums.                                   */
-/* -------------------------------------------------------------------- */
+
     if( nEllipsoid < 1 )
     {
-        const char *pszName = NULL;
-        
-        if( nDatumCode == Datum_North_American_Datum_1927 )
-        {
-            nEllipsoid = Ellipse_Clarke_1866;
-            pszName = "North American Datum 1927";
-        }
-        else if( nDatumCode == Datum_North_American_Datum_1983 )
-        {
-            nEllipsoid = Ellipse_GRS_1980;
-            pszName = "North American Datum 1983";
-        }
-        else if( nDatumCode == Datum_WGS84 )
-        {
-            nEllipsoid = Ellipse_WGS_84;
-            pszName = "World Geodetic System 1984";
-        }
-        else if( nDatumCode == Datum_WGS72 )
-        {
-            nEllipsoid = 7043; /* WGS7 */
-            pszName = "World Geodetic System 1972";
-        }
-        else
-            return FALSE;
-
-        if( pnEllipsoid != NULL )
-            *pnEllipsoid = (short) nEllipsoid;
-
-        if( ppszName != NULL )
-            *ppszName = CPLStrdup( pszName );
-
-        return TRUE;
+        return FALSE;
     }
 
 /* -------------------------------------------------------------------- */
@@ -969,9 +1024,71 @@ int GTIFGetUOMAngleInfo( int nUOMAngleCode,
 {
     const char	*pszUOMName = NULL;
     double	dfInDegrees = 1.0;
-    const char *pszFilename = CSVFilename( "unit_of_measure.csv" );
+    const char *pszFilename;
     char	szSearchKey[24];
 
+    switch( nUOMAngleCode )
+    {
+      case 9101:
+        pszUOMName = "radian";
+        dfInDegrees = 180.0 / PI;
+        break;
+
+      case 9102:
+      case 9107:
+      case 9108:
+      case 9110:
+      case 9122:
+        pszUOMName = "degree";
+        dfInDegrees = 1.0;
+        break;
+
+      case 9103:
+        pszUOMName = "arc-minute";
+        dfInDegrees = 1 / 60.0;
+        break;
+
+      case 9104:
+        pszUOMName = "arc-second";
+        dfInDegrees = 1 / 3600.0;
+        break;
+
+      case 9105:
+        pszUOMName = "grad";
+        dfInDegrees = 180.0 / 200.0;
+        break;
+
+      case 9106:
+        pszUOMName = "gon";
+        dfInDegrees = 180.0 / 200.0;
+        break;
+
+      case 9109:
+        pszUOMName = "microradian";
+        dfInDegrees = 180.0 / (PI * 1000000.0);
+        break;
+
+      default:
+        break;
+    }
+    
+    if (pszUOMName)
+    {
+        if( ppszUOMName != NULL )
+        {
+            if( pszUOMName != NULL )
+                *ppszUOMName = CPLStrdup( pszUOMName );
+            else
+                *ppszUOMName = NULL;
+        }
+
+        if( pdfInDegrees != NULL )
+            *pdfInDegrees = dfInDegrees;
+
+        return TRUE;
+    }
+
+    pszFilename = CSVFilename( "unit_of_measure.csv" );
     sprintf( szSearchKey, "%d", nUOMAngleCode );
     pszUOMName = CSVGetField( pszFilename,
                               "UOM_CODE", szSearchKey, CC_Integer,
@@ -1002,66 +1119,10 @@ int GTIFGetUOMAngleInfo( int nUOMAngleCode,
             dfInRadians = (dfFactorB / dfFactorC);
             dfInDegrees = dfInRadians * 180.0 / PI;
         }
-                          
-
-        /* We do a special override of some of the DMS formats name */
-        if( nUOMAngleCode == 9102 || nUOMAngleCode == 9107
-            || nUOMAngleCode == 9108 || nUOMAngleCode == 9110
-            || nUOMAngleCode == 9122 )
-        {
-            dfInDegrees = 1.0;
-            pszUOMName = "degree";
-        }
     }
-
-/* -------------------------------------------------------------------- */
-/*      Otherwise handle a few well known units directly.               */
-/* -------------------------------------------------------------------- */
     else
     {
-        switch( nUOMAngleCode )
-        {
-          case 9101:
-            pszUOMName = "radian";
-            dfInDegrees = 180.0 / PI;
-            break;
-        
-          case 9102:
-          case 9107:
-          case 9108:
-          case 9110:
-            pszUOMName = "degree";
-            dfInDegrees = 1.0;
-            break;
-
-          case 9103:
-            pszUOMName = "arc-minute";
-            dfInDegrees = 1 / 60.0;
-            break;
-
-          case 9104:
-            pszUOMName = "arc-second";
-            dfInDegrees = 1 / 3600.0;
-            break;
-        
-          case 9105:
-            pszUOMName = "grad";
-            dfInDegrees = 180.0 / 200.0;
-            break;
-
-          case 9106:
-            pszUOMName = "gon";
-            dfInDegrees = 180.0 / 200.0;
-            break;
-        
-          case 9109:
-            pszUOMName = "microradian";
-            dfInDegrees = 180.0 / (PI * 1000000.0);
-            break;
-
-          default:
-            return FALSE;
-        }
+        return FALSE;
     }
 
 /* -------------------------------------------------------------------- */
@@ -1309,12 +1370,54 @@ int GTIFGetProjTRFInfo( /* COORD_OP_CODE from coordinate_operation.csv */
     double	adfProjParms[7];
     char	szTRFCode[16];
     int         nCTProjMethod;
-    char       *pszFilename = CPLStrdup(CSVFilename("projop_wparm.csv"));
+    char       *pszFilename;
+    
+    if ((nProjTRFCode >= Proj_UTM_zone_1N && nProjTRFCode <= Proj_UTM_zone_60N) ||
+        (nProjTRFCode >= Proj_UTM_zone_1S && nProjTRFCode <= Proj_UTM_zone_60S))
+    {
+        int bNorth;
+        int nZone;
+        if (nProjTRFCode <= Proj_UTM_zone_60N)
+        {
+            bNorth = TRUE;
+            nZone = nProjTRFCode - Proj_UTM_zone_1N + 1;
+        }
+        else
+        {
+            bNorth = FALSE;
+            nZone = nProjTRFCode - Proj_UTM_zone_1S + 1;
+        }
+
+        if (ppszProjTRFName)
+        {
+            char szProjTRFName[64];
+            sprintf(szProjTRFName, "UTM zone %d%c",
+                    nZone, (bNorth) ? 'N' : 'S');
+            *ppszProjTRFName = CPLStrdup(szProjTRFName);
+        }
+
+        if (pnProjMethod)
+            *pnProjMethod = 9807;
+
+        if (padfProjParms)
+        {
+            padfProjParms[0] = 0;
+            padfProjParms[1] = -183 + 6 * nZone;
+            padfProjParms[2] = 0;
+            padfProjParms[3] = 0;
+            padfProjParms[4] = 0.9996;
+            padfProjParms[5] = 500000;
+            padfProjParms[6] = (bNorth) ? 0 : 10000000;
+        }
+
+        return TRUE;
+    }
 
 /* -------------------------------------------------------------------- */
 /*      Get the proj method.  If this fails to return a meaningful      */
 /*      number, then the whole function fails.                          */
 /* -------------------------------------------------------------------- */
+    pszFilename = CPLStrdup(CSVFilename("projop_wparm.csv"));
     sprintf( szTRFCode, "%d", nProjTRFCode );
     nProjMethod =
         atoi( CSVGetField( pszFilename,
